k8s/StatefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
    name: web
spec:
    serviceName: nginx
    replicas: 2
    selector:
        matchLabels:
            app: nginx
    template:
        metadata:
            labels:
                app: nginx
        spec:
            containers:
                - name: nginx
                  image: k8s.gcr.io/nginx-slim:0.8
                  ports:
                      - containerPort: 80
                        name: web
                  volumeMounts:
                      - name: www
                        mountPath: /usr/share/nginx/html
    volumeClaimTemplates:
        - metadata:
              name: www
          spec:
              accessModes:
                - ReadWriteOnce
              resources:
                  requests:
                      storage: 1Gi
